fix: globla app fixes by gisel

--- a/index-JEIDEV.html
+++ b/index-JEIDEV.html
@@ -1,51 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="ProCanje - Corredor" />
-    <link
-      href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css"
-      rel="stylesheet"
-    />
-    <title>ProCanje - Corredor</title>
+    <meta name="description" content="Pulso Propiedades - Corredor" />
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
+    <title>Pulso Propiedades - Corredor</title>
     <style>
-      #root {
-        width: 100vw;
-        height: 100vh;
-      }
+        #root {
+            width: 100vw;
+            height: 100vh;
+        }
 
-      body {
-        margin: 0;
-        font-family: Helvetica, Arial, sans-serif;
-      }
-      #map {
-        width: 100vw;
-        height: 100vh;
-      }
+        body {
+            margin: 0;
+            font-family: Helvetica, Arial, sans-serif;
+        }
 
-      .control-panel {
-        position: absolute;
-        top: 0;
-        right: 0;
-        max-width: 320px;
-        background: #fff;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
-        padding: 12px 24px;
-        margin: 20px;
-        font-size: 13px;
-        line-height: 2;
-        color: #6b6b76;
-        text-transform: uppercase;
-        outline: none;
-      }
+        #map {
+            width: 100vw;
+            height: 100vh;
+        }
+
+        .control-panel {
+            position: absolute;
+            top: 0;
+            right: 0;
+            max-width: 320px;
+            background: #fff;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+            padding: 12px 24px;
+            margin: 20px;
+            font-size: 13px;
+            line-height: 2;
+            color: #6b6b76;
+            text-transform: uppercase;
+            outline: none;
+        }
     </style>
-  </head>
-  <body>
+</head>
+
+<body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-  </body>
+</body>
+
 </html>
