feat: upload images with restrictions

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
     <!-- pwa config -->
-    <meta name="description"
-        content="Descubre Pulso Propiedades, tu aliado definitivo en el corretaje de propiedades. Conéctate con una red ética de corredores y maximiza tus oportunidades de canje con seguridad y eficiencia. Únete a la comunidad de corretaje más innovadora y confiable de Chile." />
+    <meta name="description" content="" />
     <!-- Color barra de estado -->
     <meta name="theme-color" content="#19223c" />
     <!-- Favicon PNG -->
@@ -22,7 +21,7 @@
     <!-- end pwa config -->
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
     <title>
-        Pulso Propiedades | La Plataforma Líder en Canje de Propiedades Inmobiliarias
+        Pulso Propiedades | Intranet Usuarios
     </title>
     <style>
         #root {
